syntax = "proto3";

package weather;

option go_package = "github.com/tozastation/go-grpc-ddd-example/interfaces/rpc/weather";

service Weathers{
    rpc Get (GetRequest) returns (GetResponse) {}
}

message Weather {
    double ID = 1;
    string CityName = 2;
    double TempMax = 3;
    double TempMin = 4;
    double Wind = 5;
    string Type = 6;
    string Description = 7;
}

message GetRequest {
    string CityName = 1;
}

message GetResponse {
    Weather Weather = 1;
}